# pytorch_custom_op

./: CMakeLists.txt  README.md  pyt_all_reduce_cpu_test.py  pyt_all_reduce_gpu_test.py  pyt_all_reduce_kernel.cu  pyt_all_reduce_kernel.hh  pyt_all_reduce_op.cpp  run_build.sh
